# LindaDB

./: .cirrus.yml  .clang-format  .clang-tidy  .codecov.yml  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.adoc  README.adoc  devcontainer.json  resources.txt  vcpkg.default.json  vcpkg.json  vcpkg.komondor.json
.devcontainer/: devcontainer.json
ci/: gather-coverage.bat  gather-coverage.sh  symlinks.sh
cmake/: add_covered_test.cmake  generate_warnings.cmake
cmake/toolchains/: arm64-linux-clang.cmake  arm64-linux-gcc.cmake  cray-komondor.cmake  x64-linux-clang.cmake  (+2 more)
demo/: CMakeLists.txt
demo/primes/: CMakeLists.txt  primes-serial.cxx  primes.cxx
src/LindaDB/: CMakeLists.txt
src/LindaDB/include/ldb/: loader.hxx
src/LindaDB/include/ldb/lv/: fn_call_builder.hxx
src/LindaDB/public/ldb/: common.hxx  profile.hxx  profiler.hxx  query.hxx  query_tuple.hxx  simple_store.hxx  store.hxx
src/LindaDB/public/ldb/bcast/: broadcast.hxx  broadcaster.hxx  null_broadcast.hxx  yes_mock_broadcast.hxx
src/LindaDB/public/ldb/data/: chunked_list.hxx  locked_list.hxx
src/LindaDB/public/ldb/index/tree/: index_query.hxx  legacy_tree_node.hxx  payload.hxx  payload_dispatcher.hxx  tree.hxx  tree_node.hxx  tree_node_handler.hxx
src/LindaDB/public/ldb/index/tree/impl/avl/: avl_node.hxx  avl_tree.hxx
src/LindaDB/public/ldb/index/tree/impl/avl2/: avl2_tree.cxx  avl2_tree.hxx
src/LindaDB/public/ldb/index/tree/payload/: chime_payload.hxx  scalar_payload.hxx  vector_payload.hxx  vectorset_payload.hxx
src/LindaDB/public/ldb/lv/: dyn_function_adapter.hxx  fn_call_holder.hxx  fn_call_tag.hxx  global_function_map.hxx  linda_tuple.hxx  linda_value.hxx  ref_type.hxx  tuple_builder.hxx
src/LindaDB/public/ldb/query/: concrete_tuple_query.hxx  make_matcher.hxx  manual_fields_query.hxx  match_type.hxx  match_value.hxx  meta.hxx  meta_finder.hxx  tuple_query.hxx  tuple_query_if.hxx  type_stubbed_tuple_query.hxx
src/LindaDB/public/ldb/store_command/: read_store_command.hxx  remove_store_command.hxx
src/LindaDB/public/ldb/support/: move_only_function.hxx
src/LindaDB/src/: common.cxx  loader.nt.cxx  malloc_overrider.cxx  simple_store.cxx  store.cxx  tracy.cxx
src/LindaDB/src/data/: chunked_list.cxx
src/LindaDB/src/index/tree/: index_query.cxx  legacy_tree_node.cxx  payload.cxx  payload_dispatcher.cxx  tree.cxx  tree_node.cxx  tree_node_handler.cxx
src/LindaDB/src/index/tree/payload/: chime_payload.cxx  scalar_payload.cxx  vector_payload.cxx
src/LindaDB/src/lv/: fn_call_builder.cxx  fn_call_holder.cxx  global_function_map.cxx  linda_tuple.cxx  linda_value.cxx  tuple_builder.cxx
src/LindaDB/src/query/: concrete_tuple_query.cxx  manual_fields_query.cxx  tuple_query.cxx
src/LindaPq/: CMakeLists.txt  test.cxx
src/LindaPq/lindapq/: setup.sql
src/LindaPq/lindapq/include/lpq/: db_context.hxx  db_notify_awaiter.hxx  db_query.hxx  pg_conn_pool.hxx  pg_store.hxx  query_tuple_to_sql.hxx
src/LindaPq/lindapq/src/: db_context.cxx  db_notify_awaiter.cxx  db_query.cxx  pg_conn_pool.cxx  pg_store.cxx  query_tuple_to_sql.cxx
src/LindaPq/pglinda/: pglinda.sql
src/LindaPq/pglinda/include/: fam_datum.hxx  linda_funs.h  linda_type_funs.h
src/LindaPq/pglinda/sql/: 00-types.sql  01-compare.sql  02-opclass.sql  03-utils.sql
src/LindaPq/pglinda/src/: linda_binary.cxx  linda_compare.cxx  linda_hash.cxx  linda_str.cxx  linda_utils.cxx  pq_interface.c
src/LindaPq/pglinda/src/LV/: linda_binary.cxx  linda_compare.cxx  linda_hash.cxx  linda_str.cxx  linda_utils.cxx  pq_interface.c
src/LindaPq/pglinda/src/LV_TYPE/: linda_type_binary.cxx  linda_type_compare.cxx  linda_type_str.cxx  linda_type_utils.cxx  pq_interface.c
src/LindaRT/: CMakeLists.txt
src/LindaRT/include/lrt/: communication_tags.hxx  loader.hxx
src/LindaRT/include/lrt/bcast/: manual_broadcast_handler.hxx  mpi_request_vector_awaiter.hxx  multi_thread_broadcast.hxx  reduce_awaiter.hxx
src/LindaRT/include/lrt/work_pool/: work_factory.hxx
src/LindaRT/include/lrt/work_pool/work/: eval_work.hxx  insert_work.hxx  nop_work.hxx  read_work.hxx  remove_work.hxx  try_read_work.hxx  try_remove_work.hxx
src/LindaRT/public/lrt/: dyn_function_adapter.hxx  eval.hxx  global_function_map.hxx  linda.hxx  mpi_runtime.hxx  mpi_thread_context.hxx  pp.hxx  runtime.hxx  runtime_storage.hxx
src/LindaRT/public/lrt/balancer/: balancer.hxx  balancer_if.hxx  round_robin_balancer.hxx  uniform_random_balancer.hxx
src/LindaRT/public/lrt/serialize/: int.hxx  query.hxx  tuple.hxx
src/LindaRT/public/lrt/work_pool/: work.hxx  work_if.hxx  work_pool.hxx  work_queue.hxx
src/LindaRT/src/: global_function_map.cxx  loader.nt.cxx  main.cxx  malloc_overrider.cxx  mpi_runtime.cxx  mpi_thread_context.cxx  runtime.cxx  runtime_storage.cxx
src/LindaRT/src/bcast/: manual_broadcast_handler.cxx  multi_thread_broadcast.cxx
src/LindaRT/src/serialize/: tuple.cxx
src/LindaRT/src/work_pool/: work_factory.cxx
src/LindaRT/src/work_pool/work/: eval_work.cxx  insert_work.cxx  read_work.cxx  remove_work.cxx  try_read_work.cxx  try_remove_work.cxx
test/: CMakeLists.txt  lindart.cxx  simple-eval.cxx  test.cxx
test/LindaDB/: CMakeLists.txt  assert_test.cxx  query_tuple.test.cxx  simple_store.test.cxx  store.test.cxx
test/LindaDB/bcast/: broadcast.test.cxx
test/LindaDB/data/: chunked_list.test.cxx
test/LindaDB/lv/: dyn_function_adapter.test.cxx  fn_call_holder.test.cxx  fn_call_tag.test.cxx  global_function_map.cxx  linda_tuple.test.cxx  linda_value.test.cxx  ref_type.test.cxx  tuple_builder.test.cxx
test/LindaDB/query/: concrete_tuple_query.test.cxx  manual_field_tuple_query.test.cxx  type_stubbed_tuple_query.test.cxx
test/LindaDB/tree/: avl_tree.test.cxx  t_tree.test.cxx  tree_node.test.cxx
test/LindaDB/tree/avl/: chime_avl.test.cxx  scalar_avl.test.cxx  vector_avl.test.cxx  vectorset_avl.test.cxx
test/LindaDB/tree_payloads/: chime_payload.test.cxx  scalar_payload.test.cxx  vector_payload.test.cxx  vectorset_payload.test.cxx
test/LindaRT/: CMakeLists.txt  runtime.test.cxx  serialize_tuple.test.cxx  work_pool.test.cxx  work_queue.test.cxx
(+14 files in other folders)
